--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "docs:preview": "vitepress preview docs"
   },
   "devDependencies": {
+    "@vue/runtime-core": "^3.5.24",
     "echarts": "^5.6.0",
     "sass": "^1.89.1",
     "vitepress": "^1.6.3",
