--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "devDependencies": {
     "@vue/runtime-core": "^3.5.24",
     "echarts": "^5.6.0",
+    "estree-walker": "1.0.1",
     "sass": "^1.89.1",
     "vitepress": "^1.6.3",
     "vitepress-plugin-llms": "^1.7.3",
