--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "description": "vitepress-theme-teek 文档模板",
   "type": "module",
   "scripts": {
+    "dev": "vitepress dev docs",
     "docs:dev": "vitepress dev docs",
     "docs:build": "vitepress build docs",
     "docs:preview": "vitepress preview docs"
