--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "private": true,
-  "name": "vitepress-theme-teek-docs-template",
+  "name": "vitepress-docs",
   "version": "1.0.0",
-  "description": "vitepress-theme-teek 文档模板",
+  "description": "VitePress docs",
   "type": "module",
   "scripts": {
     "dev": "vitepress dev docs",
@@ -12,15 +12,9 @@
   },
   "devDependencies": {
     "@vue/runtime-core": "^3.5.24",
-    "echarts": "^5.6.0",
-    "estree-walker": "1.0.1",
-    "sass": "^1.89.1",
-    "vitepress": "^1.6.3",
-    "vitepress-plugin-llms": "^1.7.3",
-    "vitepress-theme-teek": "^1.5.2"
+    "vitepress": "^1.6.3"
   },
   "dependencies": {
-    "html2canvas": "^1.4.1",
     "vue": "^3.5.16"
   }
 }
